--- a/styles/style.css
+++ b/styles/style.css
@@ -182,3 +182,50 @@ main {
 .chat {
     margin-left: 30px;
 }
+
+/*-------------------------
+       Footer section 
+----------------------------*/
+
+footer {
+    text-align: center;
+    background-color: #161616;
+}
+
+footer h1 {
+    font-size: 2.5em;
+    color: white;
+    padding-top: 50px;
+    margin-bottom: 50px;
+}
+
+footer hr {
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    width: 1320px;
+    margin-bottom: 50px;
+}
+
+footer a {
+    text-decoration: none;
+    color: white;
+    padding: 10px 20px;
+    font-size: 1.2em;
+    font-weight: 600;
+
+}
+
+.social-media {
+    margin-top: 30px;
+    color: white;
+    padding-bottom: 50px;
+}
+
+.fa-brands {
+    margin-top: 10px;
+    font-size: 1.5em;
+}
+
+.fa-linkedin,
+.fa-github {
+    padding-left: 20px;
+}
