--- a/styles/style.css
+++ b/styles/style.css
@@ -243,6 +243,96 @@ footer a {
     padding-left: 20px;
 }
 
-/*------------------------------
-       Upcoming Matches  
- ----------------------------------*/
+/*-----------------------------------
+        Responsive Part  
+-------------------------------------*/
+
+/* for mobile device */
+@media only screen and (max-width:576px) {
+    main {
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 10px;
+    }
+
+    .top-banner {
+        padding-left: 0%;
+        margin-left: 0%;
+        display: flex;
+        flex-direction: column-reverse;
+        width: 350px;
+        /* height: 600px; */
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+        padding-bottom: 20px;
+    }
+
+    .banner-photo {
+        width: 233px;
+        height: 245px;
+        margin: 0px;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 10px;
+        margin-top: 10px;
+
+    }
+
+    .top-banner-text h1 {
+        font-size: 1em;
+        padding-top: 200px;
+    }
+
+    .top-banner-text p {
+        width: 100%;
+        font-size: 0.6em;
+    }
+
+    .top-banner-text {
+        height: 178px;
+        width: 258px;
+        /* display: flex;
+        justify-content: center;
+        text-align: center;
+        flex-direction: column;
+        color: white; */
+        padding: 0px;
+        margin-bottom: 20px;
+        margin-left: 0%;
+
+    }
+
+    .link-btn {
+        justify-content: center;
+        margin-left: 35px;
+        margin-bottom: 200px;
+    }
+
+    .mid-section {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .menu {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        background-color: white;
+        margin-left: 35px;
+        margin-top: -50px;
+        margin-bottom: 50px;
+        border: 1px solid #E8E8E8;
+    }
+
+    .menu-features {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .box-photo img {
+        width: 352px;
+    }
+
+    .footer-feature {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
